LS-1965 - fixing test